--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  
   <div class="header">
     <div class="left-section">
       <p style="font-weight: bold;">ROGU</p>
@@ -17,26 +18,137 @@
     <div class="middle-section">
       <i><button class="search-button">Search</button></i>
       <input class="search-box" type="text" placeholder="Search like a gous">
-      
         <!--<img class="search-icon" src="assets\search-icon.png">-->
     </div>
     <div class="right-section">
       <div class="buttons">
         <button class="become-host">Become a Host</button>
-        <p>EN</p>
+        <div class="language">
+          <p class="language-name">EN</p>
+          <img class="flag" src="assets\en-uk.webp">
+          <div class="language-dropdown">
+            <button class="EN">EN</button>
+            <button class="CN">中文简体</button>
+            <button class="FR">Francais</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <!---->
   <div class="listings">
     <div class="listing">
       <img class="listing-picture"src="assets\gaylord.webp">
       <div class="description">
         <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
         <span class="distance">104 Miles away</span>
         <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
+      </div>
+    </div>
+
+    <div class="listing">
+      <img class="listing-picture"src="assets\gaylord.webp">
+      <div class="description">
+        <span class="location">Gaylord, Michigan, US</span>
+        <span class="rating">5.0</span>
+        <span class="distance">104 Miles away</span>
+        <span class="distance">7-12 Oct</span>
+        <span class="price"><u>$1531 total</u></span>
       </div>
     </div>
   </div>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
